usecase-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ecommerce-api
  namespace: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api
      version: v1

  template:
    metadata:
      labels:
        app: api
        version: v1
    spec:
      containers:
      - name: node-coba
        image: node:16-alpine
        ports:
        - containerPort: 3000
