usecase-2/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-service
  namespace: backend

spec:
  type: NodePort

  selector:
    app: api
    version: v1

  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30080
